--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/editText1"
         android:layout_below="@+id/editText1"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPassword" >
     </EditText>
@@ -26,9 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="35dp"
         android:ems="10" >
-
         <requestFocus android:layout_width="wrap_content" />
 
     </EditText>
@@ -65,25 +64,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="20dp"
         android:layout_toLeftOf="@+id/editText1"
         android:text="@string/LoginRole" />
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView6"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_marginBottom="27dp"
-        android:text="@string/method" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView8"
-        android:layout_below="@+id/button1"
-        android:layout_marginTop="86dp"
+        android:layout_below="@+id/button3"
+        android:layout_marginTop="60dp"
         android:text="@string/LoginStatus" />
 
 
@@ -92,10 +83,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView4"
-        android:layout_centerHorizontal="true"
         android:text="@string/Status"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="10sp" />
+        android:textSize="10sp"
+        android:layout_centerHorizontal="true"
+        android:layout_toRightOf="@+id/textView4"
+        android:layout_marginLeft="50dp" />
 
     <TextView
         android:id="@+id/textView9"
@@ -106,15 +99,6 @@
         android:text="@string/Choose"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="10sp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/textView6"
-        android:onClick="loginPost"
-        android:text="@string/LoginPost" />
 
     <Button
         android:id="@+id/button1"
@@ -134,5 +118,76 @@
         android:layout_alignBottom="@+id/editText2"
         android:layout_alignParentLeft="true"
         android:text="@string/Password" />
+
+    <TextView
+        android:text="@string/TimeValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView5"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_alignStart="@+id/textView5"
+        android:layout_marginTop="20dp"
+        android:id="@+id/textView11" />
+
+    <TextView
+        android:text="@string/InitTimeValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView10"
+        android:layout_alignBaseline="@+id/textView11"
+        android:layout_alignBottom="@+id/textView11"
+        android:layout_alignLeft="@+id/textView7"
+        android:layout_alignStart="@+id/textView7"
+        android:textSize="10sp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="loginPost"
+        android:text="@string/LoginPost"
+        android:layout_below="@+id/editText2"
+        android:layout_toRightOf="@+id/textView6"
+        android:layout_toEndOf="@+id/textView6"
+        android:layout_marginTop="41dp" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/method"
+        android:layout_below="@+id/button3"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_alignStart="@+id/textView5"
+        android:layout_marginTop="30dp" />
+
+    <Button
+        android:text="Enable Regular Check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button3"
+        android:layout_marginTop="19dp"
+        android:layout_below="@+id/button1"
+        android:layout_alignRight="@+id/textView3"
+        android:layout_alignEnd="@+id/textView3" />
+
+    <TextView
+        android:text="Server IP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText2"
+        android:layout_alignParentLeft="false"
+        android:id="@+id/textViewServerIP"
+        android:layout_alignBottom="@+id/editTextServerIP"
+        android:layout_alignBaseline="@+id/editTextServerIP" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/editTextServerIP"
+        android:layout_below="@id/editText2"
+        android:layout_alignRight="@+id/editText1" />
 
 </RelativeLayout>
