--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,16 +50,6 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView5"
-        android:layout_alignLeft="@+id/textView6"
-        android:text="@string/Role"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="10sp" />
-
-    <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -72,9 +62,9 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView8"
-        android:layout_below="@+id/button3"
-        android:layout_marginTop="60dp"
+        android:layout_alignLeft="@+id/textViewRegularCheckLabel"
+        android:layout_below="@+id/buttonRegularCheck"
+        android:layout_marginTop="30dp"
         android:text="@string/LoginStatus" />
 
 
@@ -88,15 +78,14 @@
         android:textSize="10sp"
         android:layout_centerHorizontal="true"
         android:layout_toRightOf="@+id/textView4"
-        android:layout_marginLeft="50dp" />
+        android:layout_marginLeft="60dp" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textViewRegularCheckValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView8"
+        android:layout_alignBottom="@+id/textViewRegularCheckLabel"
         android:layout_alignLeft="@+id/textView6"
-        android:text="@string/Choose"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="10sp" />
 
@@ -104,10 +93,9 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button2"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_marginLeft="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/textViewServerIP"
+        android:layout_marginTop="40dp"
         android:onClick="login"
         android:text= "@string/loginButtonText"/>
 
@@ -124,7 +112,7 @@
         android:text="@string/TimeValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
+        android:layout_below="@+id/textViewRegularCheckLabel"
         android:layout_alignLeft="@+id/textView5"
         android:layout_alignStart="@+id/textView5"
         android:layout_marginTop="20dp"
@@ -142,36 +130,28 @@
         android:textSize="10sp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonManualCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="loginPost"
+        android:onClick="manualCheck"
         android:text="@string/LoginPost"
-        android:layout_below="@+id/editTextServerIP"
-        android:layout_toRightOf="@+id/button1"
-        android:layout_toEndOf="@+id/button1"
+        android:layout_below="@+id/button1"
+        android:layout_alignLeft="@+id/textView2"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="120dp"/>
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/method"
-        android:layout_below="@+id/button3"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_marginTop="30dp" />
+        android:layout_marginLeft="40dp"
+        android:enabled="false" />
 
     <Button
+        android:id="@+id/buttonRegularCheck"
         android:text="@string/enableRegularCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button3"
         android:layout_marginTop="19dp"
         android:layout_below="@+id/button1"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_toRightOf="@+id/buttonManualCheck"
+        android:layout_marginLeft ="80dp"
+        android:enabled="false"
+        android:onClick="regularCheck" />
 
     <TextView
         android:text="@string/ServerIP"
@@ -193,5 +173,26 @@
         android:layout_below="@+id/editText2"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/textViewRegularCheckLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/regularCheckPeriod"
+        android:layout_below="@+id/textView5"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_alignStart="@+id/textView5"
+        android:layout_marginTop="20dp" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Role"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="10sp"
+        android:layout_alignBottom="@+id/textView5"
+        android:layout_alignLeft="@+id/textView6"
+        android:layout_alignStart="@+id/textView6" />
 
 </RelativeLayout>
